Primo: Add raw_query argument
