# public/swagger.json
@@ -71,6 +71,12 @@
                         "type": "string"
                     },
                     {
+                        "name": "raw_query",
+                        "in": "query",
+                        "description": "Raw query string on the form 'field,operator,term'. Example: 'lsr05,exact,urealsamling42 AND lsr05,exact,urealboksamling'. Multiple queries can be combined with AND, but OR is not supported.",
+                        "type": "string"
+                    },
+                    {
                         "name": "subject",
                         "in": "query",
                         "description": "One or more subject terms. Boolean operators `AND` and `OR` are supported, with `AND` taking precedence over `OR`. Grouping with parentheses are not supported.",
